# pytorch-transformer-demo

./: .gitignore  LICENSE  README.md  data.json  pyproject.toml
.github/workflows/: ci.yml
src/transformer/: __init__.py  attention.py  decoder.py  embedding.py  encoder.py  layers.py  masks.py  model.py
tests/: test_attention.py  test_embedding.py  test_encoder.py  test_masks.py  test_model.py
tests/test_transformer/: test_decoder.py  test_embedding.py  test_layers.py
