[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-transformer-tutorial"
version = "0.1.0"
description = "An educational implementation of the Transformer model (Attention Is All You Need) in PyTorch."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["transformer", "pytorch", "attention", "nlp", "deep learning", "tutorial"]

# Core runtime dependencies
dependencies = [
    "torch",
    "torchtext",
]

[project.optional-dependencies]
# Dependencies for development (testing, linting, formatting)
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.urls]
"Homepage" = "TODO"

# --- Tool Configuration ---

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$' # Include .py and .pyi files

[tool.ruff]
line-length = 88
target-version = "py310"

# Enable specific rules or rule sets
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
[tool.ruff.lint.dummy-variable-rgx]
# Allow unused variables if they start with an underscore.
dummy-variable-rgx = "^_"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]